--- a/app/views/oeuvres/_form.html.erb
+++ b/app/views/oeuvres/_form.html.erb
@@ -89,7 +89,7 @@
         </div>
       </div>
       <div class="flex-btn-add" style="justify-content: flex-end;">
-        <button type="button" class="prev-step button large" style="margin-right: 10px;" data-action="click->multi-step-form#prev" data-multi-step-form-target="prevButton">
+        <button type="button" class="prev-step button large" data-action="click->multi-step-form#prev" data-multi-step-form-target="prevButton">
           <%= t('add_oeuvre.buttons.prev') %>
         </button>
         <button type="button" class="button large" data-action="click->multi-step-form#next">
