--- a/app/assets/stylesheets/components/_popup.scss
+++ b/app/assets/stylesheets/components/_popup.scss
@@ -125,6 +125,9 @@
 
   .popup-content {
     width: 95vw;
+    margin-bottom: calc(
+      var(--safe-area-top-android, env(safe-area-inset-top, 0px)) + 24px
+    );
   }
 
   .flex-title-popup {
