--- a/app/views/studios/_card.html.erb
+++ b/app/views/studios/_card.html.erb
@@ -44,7 +44,7 @@
                     [url_for(v1200), "1200w"]
                   ],
                   sizes: "(max-width: 600px) 400px, (max-width: 1024px) 800px, 1200px",
-                  alt: card.nom_designer, 
+                  alt: card.nom, 
                   class: "card-slide-image #{'active' if index == 0}", 
                   
                   # Chargement natif
