--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -48,6 +48,26 @@
           <%end%>
           <div class="popup-decoration">
             <svg width="186" height="46" viewBox="0 0 186 46" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <g clip-path="url(#clip0_3317_340)">
+                <path d="M23 0L30.0303 15.6304L46 17.8365L34.3773 29.0068L37.214 46L23 37.2715L8.78408 46L11.6227 29.0068L0 17.8365L15.9697 15.6304L23 0Z" fill="white"/>
+              </g>
+              <g clip-path="url(#clip1_3317_340)">
+                <path d="M93 0L100.03 15.6304L116 17.8365L104.377 29.0068L107.214 46L93 37.2715L78.7841 46L81.6227 29.0068L70 17.8365L85.9697 15.6304L93 0Z" fill="white"/>
+              </g>
+              <g clip-path="url(#clip2_3317_340)">
+                <path d="M163 0L170.03 15.6304L186 17.8365L174.377 29.0068L177.214 46L163 37.2715L148.784 46L151.623 29.0068L140 17.8365L155.97 15.6304L163 0Z" fill="white"/>
+              </g>
+              <defs>
+                <clipPath id="clip0_3317_340">
+                  <rect width="46" height="46" fill="white"/>
+                </clipPath>
+                <clipPath id="clip1_3317_340">
+                  <rect width="46" height="46" fill="white" transform="translate(70)"/>
+                </clipPath>
+                <clipPath id="clip2_3317_340">
+                  <rect width="46" height="46" fill="white" transform="translate(140)"/>
+                </clipPath>
+              </defs>
             </svg>
           </div>
           <p class="subtitle-popup"><%= t('mainpopup.subtitle_feedback') %></p>
